--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/node": "22.10.1",
     "@types/react": "18.3.12",
@@ -21,6 +22,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "eslint": "9.16.0",
     "eslint-config-next": "15.0.3",
     "lucide-react": "^0.462.0",
@@ -28,6 +30,7 @@
     "next-auth": "^4.24.10",
     "postcss": "8.4.49",
     "react": "18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.15",
