--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.15",
     "tailwindcss-animate": "^1.0.7",
